--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     height: 100vw;
     font-size: 62.5%;
 }
+
+
+
+
 /* HEADER */
 .main-header {
     width: 100%;
@@ -14,15 +18,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blanchedalmond;
+    position: absolute;
 }
 .overhead-bar {
     width: 95%;
     height: 0.3rem;
-    background-color: red;
+    background-color: #E00B25;
     position: absolute;
     top: 0;
 }
+
+
+
+
 /* NAVIGATION */
 .header-nav {
     position: absolute;
@@ -38,14 +46,22 @@ body {
     padding: 5px 0px;
 }
 .nav-text {
-    color: black;
+    color: white;
     font-size: 18px;
+    display: flex;
 }
+
+
+
+
+
 /* MENU BUTTON */
 .menu-btn,
 .header-nav-item {
     height: 100%;
     margin-right: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 .menu-btn{
     width: 1.5rem;
@@ -56,7 +72,7 @@ body {
     cursor: pointer;
 }
 .btn-burger-topl {
-    background-color: black;
+    background-color: white;
     width: 60%;
     height: 2px;
     position: absolute;
@@ -64,7 +80,7 @@ body {
     transition: all .3s ease-in-out;
 }
 .btn-burger-topr {
-    background-color: black;
+    background-color: white;
     width: 60%;
     height: 2px;
     position: absolute;
@@ -73,7 +89,7 @@ body {
     transition: all .3s ease-in-out;
 }
 .btn-burger-btml {
-    background-color: black;
+    background-color: white;
     width: 70%;
     height: 2px;
     position: absolute;
@@ -81,7 +97,7 @@ body {
     transition: all .3s ease-in-out;
 }
 .btn-burger-btmr {
-    background-color: black;
+    background-color: white;
     width: 60%;
     height: 2px;
     position: absolute;
@@ -93,6 +109,10 @@ body {
     transform: translateX(-10px);
     background-color: transparent;
 } 
+
+
+
+
 /* MENU ANIMATION */
 .menu-btn.open .btn-burger-topl {
     transform: rotate(45deg);
@@ -106,14 +126,22 @@ body {
 }
 .menu-btn.open .btn-burger-btmr {
     transform: rotate(45deg);
-    background-color: black;
+    background-color: white;
 }
+
+
+
+
 /* LOGO */
 .logo-wrapper {
     width: 15rem;
     height: 2rem;
     border: 1px white solid;
 }
+
+
+
+
 /* ICON NAV */
 .icon-wrapper {
     width: 10%;
@@ -164,5 +192,81 @@ body {
 
 
 
+/* HERO SECTIONS */
+.hero {
+    width: 100%;
+    height: 930px;
+    display: flex;
+}
+.hero-img-up,
+.hero-img-mid {
+    width: 65%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    position: inherit;
+    background-size: cover;
+}
+.hero-content-up,
+.hero-content-mid{
+    width: 35%;
+    height: 100%;
+}
+.hero-img-up {
+    background-image: url(/Mammut/slike-mammut/Hiking_FW22_Scottland_019.webp);
+}
+.hero-content-up {
+    background-color: blanchedalmond;
+}
+.hero-img-mid {
+    background-image: url(/Mammut/slike-mammut/50e0035d4d7937a60a0e19717c701026.png);
+}
+.hero-content-mid {
+    background-color: rgb(0, 0, 66);
+}
+.hero-img-dwn {
+    width: 100%;
+    height: 100%;
+    background-image: url(/Mammut/slike-mammut/mammut1.jpeg);
+    background-size: cover;
+}
 
+
+
+
+
+/* CATEGORIES CONTAINER */
+.categories-container {
+    width: 100%;
+    height: 550px;
+}
+
+
+
+
+/* CARD CONTAINER */
+.card-container {
+    width: 100%;
+    height: 1000px;
+}
+
+
+
+
+
+/* CATEGORIES CARD CONTAINER */
+.categories-card-container {
+    width: 100%;
+    height: 550px;
+}
+
+
+
+/* FOOTER */
+.footer-main {
+    width: 100%;
+    height: 1200px;
+    background-color: rgb(0, 0, 66);
+    display: flex;
+}
 
