--- a/style.css
+++ b/style.css
@@ -154,15 +154,16 @@ body {
     display: flex;
     width: 2rem;
     height: 100%;
+    margin-left: 1rem;
     float: right;
     position: relative;
-    border: 1px black solid;
 }
 .loop {
     display: flex;
     width: 100%;
     height: 100%;
     position: absolute;
+    position: inherit;
 }
 .loop-curcle {
     border: 2px solid white;
@@ -179,8 +180,9 @@ body {
     height: 2px;
     right: 0;
     bottom: 0;
-    transform: rotate(45deg) translate(-3px, -3px);
-    border-radius: 3px;
+    rotate: 45deg;
+    translate: 2px -5px;
+    border-radius: 5px;
     transition: all .1s ease-in-out;
 }
 .loop:hover .loop-curcle {
@@ -264,8 +266,35 @@ body {
 .categories-container {
     width: 100%;
     height: 550px;
+    position: relative;
+    display: flex;
+    align-items: center;
 }
-
+.categories-heading {
+    width: 40%;
+    height: 40%; 
+    padding: 0px 71.68px 0px 51.2px;
+    display: flex;  
+    background-color: aqua;
+    position: relative;
+}
+.categories-text {
+    font-size: 40px;
+}
+@keyframes blink {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  
+  .dot {
+    animation: blink 2s infinite;
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    align-self: center;
+    pos
+  }
 
 
 
@@ -333,7 +362,7 @@ body {
 .communications-icon:hover {
     background-color: #23293c;
 }
-.icon {
+.footer-icon {
     width: 30%;
     height: 30%;
     margin: auto;
