--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 
 
 
-
 /* HEADER */
 .main-header {
     width: 100%;
@@ -50,6 +49,11 @@ body {
     color: white;
     font-size: 18px;
     display: flex;
+    transition: all .5s ease-in-out;
+    cursor: pointer;
+}
+.nav-text:hover {
+    font-style: italic;
 }
 
 
@@ -110,25 +114,37 @@ body {
     transform: translateX(-10px);
     background-color: transparent;
 } 
-
-
-
-
-/* MENU ANIMATION */
 .menu-btn.open .btn-burger-topl {
     transform: rotate(45deg);
+    background-color: black;
+
 }
 .menu-btn.open .btn-burger-topr {
     transform: rotate(-45deg);
+    background-color: black;
+
 }
 .menu-btn.open .btn-burger-btml {
     transform: rotate(-45deg);
     width: 60%;
+    background-color: black;
 }
 .menu-btn.open .btn-burger-btmr {
     transform: rotate(45deg);
-    background-color: white;
+    background-color: black;
 }
+/* MAIN MENU */
+.main-menu {
+    height: 100%;
+    width: 0%;
+    background-color: white;
+    position: absolute;
+    transition: all .5s ease-in-out;
+}
+.main-menu-open {
+    width: 40%;
+}
+
 
 
 
@@ -684,9 +700,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all .5s ease;
 }
-.cardl:hover .card-men,
-.cardl:focus .card-men {
+.card:hover .card-men,
+.card:focus .card-men {
   transform: scale(1.05);
 }
 .card-women {
@@ -699,10 +716,11 @@ body {
     transition: all .5s ease-in-out;
     cursor: pointer;
 }
-.cardr:hover .card-women,
-.cardr:focus .card-women {
+.card:hover .card-women,
+.card:focus .card-women {
   transform: scale(1.05);
 }
+
 
 
 
@@ -721,7 +739,7 @@ body {
 /* FOOTER */
 .footer-main {
     width: 100%;
-    height: 1200px;
+    height: 1000px;
     background-color: #23293c;
     display: flex;
     position: relative;
@@ -877,7 +895,7 @@ body {
     height: 400px;
     position: relative;
     position: absolute;
-    top: 40%;
+    bottom: 0;
 }
 .footer-company-description {
     width: 35%;
@@ -947,7 +965,7 @@ body {
 .footer-sub-nav-heading {
     font-size: 15px;
     color: #adaeb2;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .footer-sub-nav-item {
     width: 100%;
@@ -1018,4 +1036,22 @@ body {
 }
 .footer-sub-nav-item:hover .sub-nav-arrow-container {
     translate: -15px;
+}
+.footer-lower {
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    left: 2.5%;
+}
+.footer-legal-item {
+    font-size: 15px;
+    color: #dcdde0;
+    display: inline-block;
+    text-align: center;
+    font-weight: bold;
+    margin-right: 30px;
+    cursor: pointer;
+}
+.footer-legal-item:hover {
+    font-style: italic;
 }
